Mon Feb 15 07:45:28 1999  Tim Janik  <timj@gtk.org>

	* configure.in (--enable-debug): default to yes for development trees.

Fri Feb 12 00:08:01 1999  Lars Hamann  <lars@gtk.org>

	* gtk/gtklist.c (gtk_list_remove_items_internal): don't autoselect
	focus_row in case of GTK_SELECTION_EXTENDED

	* gtk/testgtk.c : few changes in list example.

	* gtk/gtklistitem.c (gtk_list_item_class_init): 
	* gtk/gtkctree.c (gtk_ctree_class_init): 
	* gtk/gtkclist.c (gtk_clist_class_init): 
	fixed indentation, removed unused key bindings
	
Wed Feb 10 01:02:46 1999  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.c (real_remove_row): 
	* gtk/gtkctree.c (gtk_ctree_remove_node): don't autoselect focus_row
	in case of GTK_SELECTION_EXTENDED

	* gtk/testgtk.c : few changes in clist/ctree examples.

Wed Feb 10 15:49:16 1999  Tim Janik  <timj@gtk.org>

	* gtk/gtkwindow.c (gtk_window_class_init):
	* gtk/gtkctree.c (gtk_ctree_class_init): applied patch from Paolo
	Molaro to fix GTK_TYPE_POINTER args of ::tree_collapse and
	::set_focus signals.

	* docs/gtk_tut.sgml: s/menufactory/itemfactory, minor fixups
	to the item factory example.

Wed Feb 10 11:05:53 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c: Reverted coding style "fixups"

Wed Feb 10 10:43:50 1999  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkwindow.c (gdk_window_set_icon, gdk_window_set_group):
	 Supplement the existing WMNormalHints, don't 
	 overwrite them.

Wed Feb 10 08:35:36 1999  Tim Janik  <timj@gtk.org>

	* gtk/gtkcolorsel.c (gtk_color_selection_draw_value_bar): asure that
	->value_buf always points to an allocated area.
	(gtk_color_selection_drag_end): new function hooked up to drag_end to
	destroy the drag_window.

	* gtk/gtkdnd.c: some coding style fixups.

Wed Feb 10 06:47:17 1999  Tim Janik  <timj@gtk.org>

	* gdk/gdkwindow.c: various indentation fixes.

	* gdk/gdkevents.c: coding style fixups.
	NULL initialize event_func, event_notify and event_chunk.
	(expose_predicate): made this function static.