@@ -1,3 +1,12 @@
+Mon Feb 15 11:13:01 1999  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtkwindow.c (gtk_window_set_focus): 
+	  gtk/gtkwidget.c (gtk_widget_real_grab_focus):
+
+	If the focus widget is the same, but does not currently
+	have the focus, call gtk_window_set_focus(). This is needed
+	so that click focusing with GtkPlug works correctly.
+
 Mon Feb 15 07:45:28 1999  Tim Janik  <timj@gtk.org>
 
 	* configure.in (--enable-debug): default to yes for development trees.
